# python-ml-learning-app

./: .gitignore  pyproject.toml  requirements.txt
cli/: lesson_runner.py  main.py
src/: __init__.py
src/lessons/: __init__.py  variables.py
src/quiz/: __init__.py
